<resources>
    <string name="app_name">SignUpFragmentsTutorial</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Name</string>
    <string name="languagesTV"><u>LANGUAGES</u></string>
    <string name="genderTV"><u>GENDER</u></string>
    <string name="nameET">Name</string>
    <string name="surnameET">Surname</string>
    <string name="usernameET">Username</string>
    <string name="dateET">Date of Birth</string>
    <string name="passwordET">Password</string>
    <string name="confirm_passwordET">Confirm password</string>
    <string name="maleRB">Male</string>
    <string name="femaleRB">Female</string>
    <string name="otherRB">Other</string>
    <string name="kotlinCB">Kotlin</string>
    <string name="javaCB">Java</string>
    <string name="dartCB">Dart</string>
    <string name="csharpCB">C#</string>
    <string name="buttonContinue">Continue</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="username">Username:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="gender">Gender:</string>
    <string name="skills">Skills:</string>
    <string name="go_back">Go Back</string>
    <string name="approve">Approve</string>
    <string name="select_date_of_birth">Select date of birth</string>
    <string name="city">City:</string>
    <string name="city_hint">City</string>
    <string name="your_car">Your Car</string>
    <string name="your_car_show">Your Car:</string>
    <string name="movies">Movies</string>
    <string name="sign_up">Sign Up</string>
    <string name="movies_images">Movies\' Images</string>
    <string name="textview_tvMovieYear">TextView</string>
    <string-array name="cities">
        <item>London</item>
        <item>Paris</item>
        <item>Madrid</item>
        <item>Berlin</item>
        <item>Amsterdam</item>
        <item>Washington D.C.</item>
        <item>Rome</item>
    </string-array>
    <string-array name="cars">
        <item>Toyota Corolla</item>
        <item>Ford F-series</item>
        <item>Volkswagen Golf</item>
        <item>Volkswagen Beetle</item>
        <item>Ford Escort</item>
        <item>Honda Civic</item>
        <item>Ford Model T</item>
        <item>Volkswagen Passat</item>
        <item>Chevrolet Impala</item>
        <item>Toyota Corolla</item>
        <item>Ford F-series</item>
        <item>Volkswagen Golf</item>
        <item>Volkswagen Beetle</item>
        <item>Ford Escort</item>
        <item>Honda Civic</item>
        <item>Ford Model T</item>
        <item>Volkswagen Passat</item>
        <item>Chevrolet Impala</item>
        <item>Toyota Corolla</item>
        <item>Ford F-series</item>
        <item>Volkswagen Golf</item>
        <item>Volkswagen Beetle</item>
        <item>Ford Escort</item>
        <item>Honda Civic</item>
        <item>Ford Model T</item>
        <item>Volkswagen Passat</item>
        <item>Chevrolet Impala</item>
    </string-array>
</resources>