<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        tools:context=".fragment.SignUpFragment">

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/nameET"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etSurname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/surnameET"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="@+id/etName"
            app:layout_constraintStart_toStartOf="@+id/etName"
            app:layout_constraintTop_toBottomOf="@+id/etName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/etSurname"
            app:layout_constraintStart_toStartOf="@id/etSurname"
            app:layout_constraintTop_toBottomOf="@id/etSurname">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/city_hint"
                android:inputType="none"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/etSelectCar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/your_car"
            android:importantForAutofill="no"
            android:inputType="none"
            android:linksClickable="false"
            android:longClickable="false"
            android:minHeight="48dp"
            android:selectAllOnFocus="false"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/usernameET"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="@+id/etSelectCar"
            app:layout_constraintStart_toStartOf="@+id/etSelectCar"
            app:layout_constraintTop_toBottomOf="@+id/etSelectCar" />

        <EditText
            android:id="@+id/etDOB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/dateET"
            android:importantForAutofill="no"
            android:inputType="none"
            android:linksClickable="false"
            android:longClickable="false"
            android:minHeight="48dp"
            android:selectAllOnFocus="false"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintStart_toStartOf="@+id/etUsername"
            app:layout_constraintTop_toBottomOf="@+id/etUsername" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:backgroundTint="@color/purple_500"
            android:backgroundTintMode="multiply"
            android:contentDescription="@string/select_date_of_birth"
            android:foregroundTint="@color/white"
            android:foregroundTintMode="multiply"
            android:tintMode="multiply"
            app:layout_constraintBottom_toBottomOf="@+id/etDOB"
            app:layout_constraintEnd_toEndOf="@+id/etUsername"
            app:layout_constraintTop_toTopOf="@+id/etDOB"
            app:srcCompat="@android:drawable/ic_menu_today"
            app:tint="@color/white" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/passwordET"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="@+id/imageButton"
            app:layout_constraintStart_toStartOf="@+id/etDOB"
            app:layout_constraintTop_toBottomOf="@+id/etDOB" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/confirm_passwordET"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />


        <TextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/genderTV"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/etConfirmPassword"
            app:layout_constraintStart_toStartOf="@+id/etConfirmPassword"
            app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="@+id/etConfirmPassword"
            app:layout_constraintStart_toStartOf="@+id/etConfirmPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvGender">


            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/maleRB"
                app:layout_constraintEnd_toStartOf="@+id/rbFemale"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/femaleRB"
                app:layout_constraintEnd_toStartOf="@+id/rbOther"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/rbMale"
                app:layout_constraintTop_toTopOf="@id/rbMale" />

            <RadioButton
                android:id="@+id/rbOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/otherRB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/rbFemale"
                app:layout_constraintTop_toTopOf="@id/rbFemale" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvLanguages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/languagesTV"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@id/radioGroup" />

        <LinearLayout
            android:id="@+id/linearCheckboxes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/radioGroup"
            app:layout_constraintStart_toStartOf="@id/radioGroup"
            app:layout_constraintTop_toBottomOf="@id/tvLanguages">

            <CheckBox
                android:id="@+id/cbKotlin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kotlinCB"
                app:layout_constraintStart_toStartOf="@+id/radioGroup"
                app:layout_constraintTop_toBottomOf="@+id/tvLanguages" />

            <CheckBox
                android:id="@+id/cbJava"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/javaCB"
                app:layout_constraintStart_toStartOf="@+id/cbKotlin"
                app:layout_constraintTop_toBottomOf="@+id/cbKotlin" />

            <CheckBox
                android:id="@+id/cbDart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dartCB"
                app:layout_constraintEnd_toEndOf="@+id/radioGroup"
                app:layout_constraintTop_toTopOf="@+id/cbKotlin" />

            <CheckBox
                android:id="@+id/cbCsharp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/csharpCB"
                app:layout_constraintStart_toStartOf="@+id/cbDart"
                app:layout_constraintTop_toBottomOf="@+id/cbDart" />

        </LinearLayout>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/buttonContinue"
            app:layout_constraintEnd_toEndOf="@+id/linearCheckboxes"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/linearCheckboxes"
            app:layout_constraintTop_toBottomOf="@+id/linearCheckboxes"
            tools:ignore="TouchTargetSizeCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
