<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ApproveInputFragment">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvShowName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvShowName" />


    <TextView
        android:id="@+id/tvShowName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:textColorHint="#78909C"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvShowSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvShowSurname"
        app:layout_constraintEnd_toEndOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvShowSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/surname"
        android:textColorHint="#78909C"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvShowCar"
        app:layout_constraintStart_toStartOf="@+id/tvShowName"
        app:layout_constraintTop_toBottomOf="@+id/tvShowName" />
    <TextView
        android:id="@+id/tvCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_car_show"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvShowCar"
        app:layout_constraintEnd_toEndOf="@+id/tvSurname" />

    <TextView
        android:id="@+id/tvShowCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/your_car"
        android:textColorHint="#78909C"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvShowUsername"
        app:layout_constraintStart_toStartOf="@+id/tvShowSurname"
        app:layout_constraintTop_toBottomOf="@+id/tvShowSurname" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvShowUsername"
        app:layout_constraintEnd_toEndOf="@+id/tvCar" />

    <TextView
        android:id="@+id/tvShowUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColorHint="#78909C"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvShowCity"
        app:layout_constraintStart_toStartOf="@+id/tvShowSurname"
        app:layout_constraintTop_toBottomOf="@+id/tvShowCar" />

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvShowCity"
        app:layout_constraintEnd_toEndOf="@+id/tvUsername" />

    <TextView
        android:id="@+id/tvShowCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:textColorHint="#78909C"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvShowDOB"
        app:layout_constraintStart_toStartOf="@+id/tvShowUsername"
        app:layout_constraintTop_toBottomOf="@+id/tvShowUsername" />

    <TextView
        android:id="@+id/tvDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvShowDOB"
        app:layout_constraintEnd_toEndOf="@+id/tvUsername" />

    <TextView
        android:id="@+id/tvShowDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date_of_birth"
        android:textColorHint="#78909C"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvShowGender"
        app:layout_constraintStart_toStartOf="@+id/tvShowCity"
        app:layout_constraintTop_toBottomOf="@+id/tvShowCity" />

    <TextView
        android:id="@+id/tvAppGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvShowGender"
        app:layout_constraintEnd_toEndOf="@+id/tvDOB" />

    <TextView
        android:id="@+id/tvShowGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/gender"
        android:textColorHint="#78909C"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvShowSkills"
        app:layout_constraintStart_toStartOf="@+id/tvShowDOB"
        app:layout_constraintTop_toBottomOf="@+id/tvShowDOB" />

    <TextView
        android:id="@+id/tvSkills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skills"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvAppGender"
        app:layout_constraintTop_toTopOf="@+id/tvShowSkills" />

    <TextView
        android:id="@+id/tvShowSkills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/skills"
        android:textColorHint="#78909C"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnApprove"
        app:layout_constraintStart_toStartOf="@+id/tvShowGender"
        app:layout_constraintTop_toBottomOf="@+id/tvShowGender" />

    <Button
        android:id="@+id/btnGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="@+id/btnApprove"
        app:layout_constraintEnd_toStartOf="@+id/btnApprove"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnApprove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/approve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnGoBack"
        app:layout_constraintTop_toBottomOf="@+id/tvShowSkills" />


</androidx.constraintlayout.widget.ConstraintLayout>